initial platformio.ini config

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,13 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
+
+; Upload Speed
+upload_speed = 921600
+
+; Serial Monitor Baud Rate
+monitor_speed = 115200
+
+; Library Dependencies
+lib_deps =
+    dfrobot/DFRobotDFPlayerMini @ ^1.0.6
